--- a/frontend/.env
+++ b/frontend/.env
@@ -1,10 +1,10 @@
-VITE_API_URL=http://localhost:5000/api
-VITE_RAZORPAY_KEY_ID=rzp_test_bvvPARgR4UsQAj
-VITE_RAZORPAY_KEY_SECRET=FLda9rmzLGFVu37Zjqi2fES7
+VITE_API_URL=http:************/api
+VITE_RAZORPAY_KEY_ID=*************
+VITE_RAZORPAY_KEY_SECRET=*****************
 
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/occasion-hub
-JWT_SECRET=6eastfguip79rfghoiugk
+MONGO_URI=mongodb:********/occasion-hub
+JWT_SECRET**********
 JWT_EXPIRES_IN=30d
 
